rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__current_subcrate_list_crates_behavior.snap
---
source: src/workspace_tests.rs
expression: result
---
• crate-a (workspace-local, aliased as "crate")
    First crate in test workspace
• crate-b (workspace-local)
    Second crate in test workspace
• regex 1.11.2
    An implementation of regular expressions for Rust. This implementation uses finite automata and guarantees linear time matching on all inputs. 
• serde 1.0.219
    A generic serialization/deserialization framework
• tempfile 3.21.0 (dev-dep)
    A library for managing temporary files and directories.
• std 1.90.0-nightly
    The Rust Standard Library
• alloc 1.90.0-nightly
    The Rust core allocation and collections library
• core 1.90.0-nightly
    The Rust Core Library
• proc_macro 1.90.0-nightly
    A support library for macro authors when defining new macros
• test 1.90.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework
