rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__subcrate_b_crate_alias_resolution.snap
---
source: rustdoc-mcp/src/workspace_tests.rs
expression: result
---
Item: crate_b
Kind: Module
Visibility: Public
Defined at: crate_b

Modules:
prefix_inner

Structs:
CrateBProcessor
PrefixCrateAAlias
SelfPrefixAlias
