rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__subcrate_crate_alias_resolution.snap
---
source: src/workspace_tests.rs
expression: result
---
`crate` not found. Did you mean one of these?

• `crate-a` (Crate)
• `crate-b` (Crate)
• `core` (Crate)
