rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__workspace_get_crate_a.snap
---
source: src/workspace_tests.rs
expression: result
---
Item: crate_a
Kind: Module
Visibility: Public
Defined at: crate_a

Structs:
CrateAStruct

Functions:
process_data
