rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__workspace_get_crate_b.snap
---
source: rustdoc-mcp/src/workspace_tests.rs
expression: result
---
Item: crate_b
Kind: Module
Visibility: Public
Defined at: crate_b

Modules:
prefix_inner

Structs:
AliasedCrateAStruct
CrateBProcessor
PrefixCrateAAlias
SelfPrefixAlias
