rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__workspace_list_crates_with_dependencies.snap
---
source: rustdoc-mcp/src/workspace_tests.rs
expression: result
---
• crate-a (workspace-local)
    First crate in test workspace
• crate-b (workspace-local)
    Second crate in test workspace
• anyhow 1.0.99 (crate-b)
    Flexible concrete Error type built on std::error::Error
• env_logger 0.10.2 (dev-dep) (crate-b dev)
    A logging implementation for `log` which is configured via an environment variable. 
• log 0.4.28 (crate-b)
    A lightweight logging facade for Rust 
• regex 1.11.2 (crate-a)
    An implementation of regular expressions for Rust. This implementation uses finite automata and guarantees linear time matching on all inputs. 
• serde 1.0.219 (crate-a)
    A generic serialization/deserialization framework
• tempfile 3.21.0 (dev-dep) (crate-a dev)
    A library for managing temporary files and directories.
• std 1.94.0-nightly
    The Rust Standard Library
• alloc 1.94.0-nightly
    The Rust core allocation and collections library
• core 1.94.0-nightly
    The Rust Core Library
• proc_macro 1.94.0-nightly
    A support library for macro authors when defining new macros
• test 1.94.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework
